--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
-  "homepage": "https://Zareck521.guthub.io/RoboFriends",
+  "homepage": "https://Zareck521.github.io/RoboFriends",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
